--- a/environment.yml
+++ b/environment.yml
@@ -6,8 +6,9 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2022.07.19=h06a4308_0
-  - certifi=2022.9.24=py310h06a4308_0
+  - ca-certificates=2022.9.24=ha878542_0
+  - certifi=2022.9.24=pyhd8ed1ab_0
+  - deprecation=2.1.0=pyh9f0ad1d_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.3=he6710b0_2
   - libgcc-ng=11.2.0=h1234567_1
@@ -15,8 +16,10 @@ dependencies:
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.0.3=h7f8727e_2
   - ncurses=6.3=h5eee18b_3
-  - openssl=1.1.1q=h7f8727e_0
+  - openssl=1.1.1s=h7f8727e_0
+  - packaging=21.3=pyhd8ed1ab_0
   - pip=22.2.2=py310h06a4308_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
   - python=3.10.6=haa1d7c7_0
   - readline=8.1.2=h7f8727e_1
   - setuptools=63.4.1=py310h06a4308_0
@@ -31,17 +34,20 @@ dependencies:
     - contourpy==1.0.6
     - coverage==6.5.0
     - cycler==0.11.0
+    - deepdiff==6.2.1
     - fonttools==4.38.0
+    - hashlist==0.0.8
+    - immutables==0.19
     - iniconfig==1.1.1
     - kiwisolver==1.4.4
+    - maps==5.1.1
     - matplotlib==3.6.2
     - numpy==1.23.3
-    - packaging==21.3
+    - ordered-set==4.1.0
     - pandas==1.5.1
     - pillow==9.3.0
     - pluggy==1.0.0
     - py==1.11.0
-    - pyparsing==3.0.9
     - pytest==7.1.3
     - pytest-cov==4.0.0
     - python-dateutil==2.8.2
