update READ.me for handin

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: systemsoptimization
+name: SYSOPT_G24
 channels:
   - conda-forge
   - defaults
@@ -54,4 +54,3 @@ dependencies:
     - pytz==2022.6
     - six==1.16.0
     - tomli==2.0.1
-prefix: /home/rudolfaf/.conda/envs/systemsoptimization
